--- a/src/main/resources/templates/guide.html
+++ b/src/main/resources/templates/guide.html
@@ -51,6 +51,10 @@
     </script>
 
     <style>
+        .guideimg{
+            float: left;
+            padding-right: 15px;
+        }
         .accordion-1 li.active .accordion__title span{
             color:#ffffff;
         }
@@ -58,10 +62,18 @@
             background: #014d33;
             border-bottom: 1px solid #ececec;
         }
+
+        @media (min-width: 320px) and (max-width: 480px) {
+
+            .header-info{
+                margin-top: -65px;
+            }
+
+
+        }
     </style>
 
-    <script type='text/javascript' src='https://platform-api.sharethis.com/js/sharethis.js#property=616bfbb638f8310012c866ef&product=sticky-share-buttons' async='async'></script>
-</head>
+ </head>
 <body >
 <a id="start"></a>
 <div class="nav-container " style="background: white">
@@ -118,62 +130,194 @@
 </div>
 <div class="main-container">
 
-    <section>
+    <section class="header-info">
         <div class="container">
             <div class="row justify-content-center">
                 <div class="col-md-10 col-lg-8 mt-2">
                     <article>
                         <div class="article__title text-center">
 
-                            <h2>vaccination certificate verification guide</h2>
+                            <h2>COVID-19 certificate verification</h2>
 
 
                         </div>
                         <!--end article title-->
-                        <div class="article__body">
-                            <div class="video-cover border--round">
-                                <div class="background-image-holder">
-                                    <img alt="image" src="img/guide.png" />
-                                </div>
-                                <div class="video-play-icon"></div>
-                                <iframe data-src="https://www.youtube.com/watch?v=hQ0_0kLaKtA" allowfullscreen="allowfullscreen"></iframe>
-                            </div>
+                        <div class="">
+
                             <!--end video cover-->
                             <ul class="accordion accordion-1 accordion--oneopen">
-                                <li class="active">
+                                <li>
                                     <div class="accordion__title">
-                                        <span class="h5">Scan the QR-CODE on your vaccination card </span>
+                                        <span class="h6">How to scan the QR-CODE on your vaccination card </span>
                                     </div>
                                     <div class="accordion__content">
-                                        Content
+
+                                        <div class="row justify-content-md-center">
+
+                                            <div class="col-md-12">
+                                                <div class="guideimg" ><img src="img/7.png" width="150px"/></div>
+                                                <p >The QR-CODE is located on your COVID-19 vaccination card typically at the bottom right on the cover page.
+                                                    <br/>
+                                                    You can scan the code by using the camera of your mobile device/tablet.
+                                                    For devices that do not support scanning QR code directly from the device camera. You can download a QR-CODE scanner application on the Apple store or google playstore.
+
+                                                    <br/><br/>
+                                                    Note: if you are unable to scan your QR-CODE due to physical damage please visit the your vaccination site for QR CODE reissuance.
+                                                </p>
+                                            </div>
+
+                                        </div>
+                                        
+
+
                                     </div>
                                 </li>
                                 <li>
                                     <div class="accordion__title">
-                                        <span class="h5">How to edit your vaccination information</span>
+                                        <span class="h6">Incorrect details? Name, DOB, ID Type and ID Number</span>
                                     </div>
                                     <div class="accordion__content">
-                                        Content
+                                        <div class="row justify-content-md-center">
+
+                                            <div class="col-md-12">
+
+
+                                            <div class="guideimg" ><img src="img/2.jpg" width="400px"/></div>
+
+                                        <p>1. Click on the “update” button at the top of your
+                                            e-certificate.
+                                            <br/>
+                                            Note: if you do not see this button at the top of your e-certificate. please contact the call center 0700 220 1122
+                                        </p>
+
+                                        <div class="guideimg" ><img src="img/3.jpg" width="200px"/></div>
+                                        <p>2. A popup would appear to enter the phone number/email address [1] you provided during registration.
+
+                                            <br/>
+                                            Click the “confirm” button [2]
+                                        </p>
+
+                                                <div class="guideimg" ><img src="img/34.png" width="200px"/></div>
+                                        <p>3. if you enter the correct details. you would be granted access and redirected to your profile page.
+                                            <br/>
+
+                                            Edit your incorrect details and click ‘save profile’ [1]
+                                        </p>
+
+                                    </div>
+                                        </div>
                                     </div>
                                 </li>
+                                <li>
+                                    <div class="accordion__title">
+                                        <span class="h6">Incorrect vaccination details? status, batch number ...</span>
+                                    </div>
+                                    <div class="accordion__content">
+                                        <div class="row justify-content-md-center">
+
+                                            <div class="col-md-12">
+
+
+                                                <div class="guideimg" ><img src="img/2.jpg" width="400px"/></div>
+
+                                                <p>1. Click on the “update” button at the top of your
+                                                    e-certificate.
+                                                    <br/>
+                                                    Note: if you do not see this button at the top of your e-certificate. please contact the call center 0700 220 1122
+                                                </p>
+
+                                                <div class="guideimg" ><img src="img/3.jpg" width="200px"/></div>
+                                                <p>2. A popup would appear to enter the phone number/email address [1] you provided during registration.
+
+                                                    <br/>
+                                                    Click the “confirm” button [2]
+                                                </p>
+
+                                                <p>3. if you enter the correct details. you would be granted access and redirected to your profile page.
+
+
+                                                <div class="guideimg" ><img src="img/5.jpg" width="200px"/></div>
+                                                <p>4.	Click on ‘vaccination history’ [1]
+
+                                                </p>
+
+                                                <div class="guideimg" ><img src="img/6.jpg" width="200px"/></div>
+                                                <p>4.	At the button of the page the contact details of a focal representative (s) would be displayed.
+                                                    You can contact the numbers provided to assist in resolving your issue.
+                                                    If you are unable to contact them, please call the call center. 0700 220 1122
+                                                </p>
+
+                                            </div>
+                                        </div>
+                                    </div>
+                                </li>
+
+                                <li>
+                                    <div class="accordion__title">
+                                        <span class="h6">how do I know I am due for my second dose</span>
+                                    </div>
+                                    <div class="accordion__content">
+                                        <div class="row justify-content-md-center">
+
+                                            <div class="col-md-12">
+
+
+                                                <div class="guideimg" ><img src="img/4.jpg" width="400px"/></div>
+
+                                                <p>1. A notification at the top of your e-certificate with a link to the list of vaccination sites would be displayed.
+                                                       </p>
+
+
+
+                                            </div>
+                                        </div>
+                                    </div>
+                                </li>
+
+                                <li>
+                                    <div class="accordion__title">
+                                        <span class="h6">ERROR: record has not been linked or might not exist</span>
+                                    </div>
+                                    <div class="accordion__content">
+                                        <div class="row justify-content-md-center">
+
+                                            <div class="col-md-12">
+
+
+                                                <div class="guideimg" ><img src="img/no.jpeg" width="150px"/></div>
+
+                                                <p>After scanning your QR code, if a prompt showing record has not been linked or might not exist.
+                                                    please contact the call center. 0700 220 1122
+                                                </p>
+
+
+
+                                            </div>
+                                        </div>
+                                    </div>
+                                </li>
+
                             </ul>
                         </div>
-                        <div class="article__share text-center">
-                            <a class="btn bg--facebook btn--icon" href="#">
-                                        <span class="btn__text">
-                                            <i class="socicon socicon-facebook"></i>
-                                            Share on Facebook
-                                        </span>
-                            </a>
-                            <a class="btn bg--twitter btn--icon" href="#">
-                                        <span class="btn__text">
-                                            <i class="socicon socicon-twitter"></i>
-                                            Share on Twitter
-                                        </span>
-                            </a>
-                        </div>
+
                     </article>
                     <!--end item-->
+                </div>
+            </div>
+
+            <hr/>
+            <div class="row">
+                <div class="col-md-12 text-center">
+                    <div class="modal-instance">
+                        <a class="btn type--uppercase modal-trigger" href="#" data-modal-index="0">
+                                    <span class="btn__text">
+                                        ▶ Watch Video
+                                    </span>
+                        </a>
+
+                        <!--end of modal-container-->
+                    </div>
+
                 </div>
             </div>
             <!--end of row-->
