--- a/src/main/resources/templates/guide.html
+++ b/src/main/resources/templates/guide.html
@@ -163,6 +163,8 @@
 
                                                     <br/><br/>
                                                     Note: if you are unable to scan your QR-CODE due to physical damage please visit the your vaccination site for QR CODE reissuance.
+                                                    <br/>
+                                                    please visit the vaccination site where you took the 1st dose or any of the supersites located in all the 36 states and FCT for replacement. The list can be accessed on NPHCDA's website: <a href="https://nphcda.gov.ng/">www.nphcda.gov.ng</a>
                                                 </p>
                                             </div>
 
@@ -184,21 +186,21 @@
 
                                             <div class="guideimg" ><img src="img/2.jpg" width="400px"/></div>
 
-                                        <p>1. Click on the “update” button at the top of your
+                                        <p><span class="label label--inline">1.</span> Click on the “update” button at the top of your
                                             e-certificate.
                                             <br/>
                                             Note: if you do not see this button at the top of your e-certificate. please contact the call center 0700 220 1122
                                         </p>
 
                                         <div class="guideimg" ><img src="img/3.jpg" width="200px"/></div>
-                                        <p>2. A popup would appear to enter the phone number/email address [1] you provided during registration.
+                                        <p><span class="label label--inline">2.</span> A popup would appear to enter the phone number/email address [1] you provided during registration.
 
                                             <br/>
                                             Click the “confirm” button [2]
                                         </p>
 
                                                 <div class="guideimg" ><img src="img/34.png" width="200px"/></div>
-                                        <p>3. if you enter the correct details. you would be granted access and redirected to your profile page.
+                                        <p><span class="label label--inline">3.</span> if you enter the correct details. you would be granted access and redirected to your profile page.
                                             <br/>
 
                                             Edit your incorrect details and click ‘save profile’ [1]
@@ -220,31 +222,33 @@
 
                                                 <div class="guideimg" ><img src="img/2.jpg" width="400px"/></div>
 
-                                                <p>1. Click on the “update” button at the top of your
+                                                <p><span class="label label--inline">1.</span> Click on the “update” button at the top of your
                                                     e-certificate.
                                                     <br/>
-                                                    Note: if you do not see this button at the top of your e-certificate. please contact the call center 0700 220 1122
+                                                    Note: if you do not see this button at the top of your e-certificate. please call the NPHCDA COVID-19 call center on <a href="tel:07002201122">0700 220 1122</a>
                                                 </p>
 
                                                 <div class="guideimg" ><img src="img/3.jpg" width="200px"/></div>
-                                                <p>2. A popup would appear to enter the phone number/email address [1] you provided during registration.
+                                                <p><span class="label label--inline">2.</span> A popup would appear to enter the phone number/email address [1] you provided during registration.
 
                                                     <br/>
                                                     Click the “confirm” button [2]
                                                 </p>
 
-                                                <p>3. if you enter the correct details. you would be granted access and redirected to your profile page.
+                                                <p><span class="label label--inline">3.</span> if you enter the correct details. you would be granted access and redirected to your profile page.
 
 
                                                 <div class="guideimg" ><img src="img/5.jpg" width="200px"/></div>
-                                                <p>4.	Click on ‘vaccination history’ [1]
+                                                <p><span class="label label--inline">4.</span>	Click on ‘vaccination history’ [1] to view the list of vaccination doses taken
 
                                                 </p>
 
+                                                <br/>
+                                                <br/>
                                                 <div class="guideimg" ><img src="img/6.jpg" width="200px"/></div>
-                                                <p>4.	At the button of the page the contact details of a focal representative (s) would be displayed.
+                                                <p><span class="label label--inline">5.</span>	At the button of the page the contact details of a focal representative (s) would be displayed.
                                                     You can contact the numbers provided to assist in resolving your issue.
-                                                    If you are unable to contact them, please call the call center. 0700 220 1122
+                                                    If you are unable to contact them, please call the NPHCDA COVID-19 call center on <a href="tel:07002201122">0700 220 1122</a>
                                                 </p>
 
                                             </div>
@@ -264,7 +268,7 @@
 
                                                 <div class="guideimg" ><img src="img/4.jpg" width="400px"/></div>
 
-                                                <p>1. A notification at the top of your e-certificate with a link to the list of vaccination sites would be displayed.
+                                                <p><span class="label label--inline">1.</span> A notification will be displayed as soon as you scan your QR code with a link to the list of vaccination sites would be displayed.
                                                        </p>
 
 
@@ -276,7 +280,7 @@
 
                                 <li>
                                     <div class="accordion__title">
-                                        <span class="h6">ERROR: record has not been linked or might not exist</span>
+                                        <span class="h6">ERROR: record has not been linked or might not exist </span>
                                     </div>
                                     <div class="accordion__content">
                                         <div class="row justify-content-md-center">
@@ -286,7 +290,9 @@
 
                                                 <div class="guideimg" ><img src="img/no.jpeg" width="150px"/></div>
 
-                                                <p>After scanning your QR code, if a prompt showing record has not been linked or might not exist.
+                                                <p>After scanning your QR code, if a prompt showing record has not been link or might not exist please call the NPHCDA's COVID-19 call center on
+                                                    <a href="tel:07002201122">0700 220 1122</a>
+                                                    or the state representative as listed on the portal.
                                                     please contact the call center. 0700 220 1122
                                                 </p>
 
@@ -311,7 +317,7 @@
                     <div class="modal-instance">
                         <a class="btn type--uppercase modal-trigger" href="#" data-modal-index="0">
                                     <span class="btn__text">
-                                        ▶ Watch Video
+                                        ▶ Please click here to watch the video
                                     </span>
                         </a>
 
