--- a/src/main/resources/templates/verification.html
+++ b/src/main/resources/templates/verification.html
@@ -510,7 +510,7 @@
 
                           <div class="row" id="access">
                               <div class="col-md-12">
-                                  <h5 class="text-left">Enter the phone number or email you provided at registration ex. 07002201122 , info@nphcda.gov.ng
+                                  <h5 class="text-left">Enter the phone number or email you provided at registration
                                       <br/> or call <a href="tel:07002201122">07002201122</a> for assistance</h5>
                                   <br/>
                                   <input type="text" id="phonenumber"  th:field="*{phone}" >
